[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/city/towerDefense_tile181.png" type="Texture" id=1]
[ext_resource path="res://assets/city/towerDefense_tile249.png" type="Texture" id=2]
[ext_resource path="res://scenes/City/City.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 80, 80 )

[sub_resource type="CircleShape2D" id=4]
radius = 500.0

[node name="City" type="StaticBody2D"]
position = Vector2( -1, 0 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 3 )

[node name="Base" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )

[node name="Cannon" type="AnimatedSprite" parent="."]
rotation = 1.5708
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 2 )

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Outpost" type="Area2D" parent="."]

[node name="FireRange" type="CollisionShape2D" parent="Outpost"]
shape = SubResource( 4 )
[connection signal="body_entered" from="Outpost" to="." method="_on_Outpost_body_entered"]
[connection signal="body_exited" from="Outpost" to="." method="_on_Outpost_body_exited"]
